Bug 319978 - SegFault on every start
Summary: SegFault on every start
Status: RESOLVED FIXED
Alias: None
Product: muon
Classification: Unmaintained
Component: installer (other bugs)
Version First Reported In: 2.0.0
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Jonathan Thomas
URL:
Keywords:
: 319463 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-05-18 13:44 UTC by roisto
Modified: 2013-05-20 13:23 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.0.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description roisto 2013-05-18 13:44:46 UTC
Application: muon-installer (2.0.0)
KDE Platform Version: 4.10.2
Qt Version: 4.8.4
Operating System: Linux 3.8.0-21-generic i686
Distribution: Ubuntu 13.04

-- Information about the crash:
- What I was doing when the application crashed:
Opening Muon. Doesn't matter which (ldap) user I try. Muon window flashes and then it crashes.

I use normal Kubuntu 13.4. I've tried to install Kubuntu all over again, but still no with this environment.

- Custom settings of the application:
The workstation is maintained with Puppet. It uses nscd for openldap authentication. No tweaks are made to Muon.

I'm trying to create corporate workstation default so this is important to get fixed.

The crash can be reproduced every time.

-- Backtrace:
Application: Muon-sovellusvalikoima (muon-installer), signal: Segmentation fault
Using host libthread_db library "/lib/i386-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0xb3cbf980 (LWP 6214))]

Thread 2 (Thread 0xb116ab40 (LWP 6215)):
#0  0xb4642cad in g_main_context_prepare () from /lib/i386-linux-gnu/libglib-2.0.so.0
#1  0xb46435cf in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#2  0xb4643831 in g_main_context_iteration () from /lib/i386-linux-gnu/libglib-2.0.so.0
#3  0xb5d58c3f in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/i386-linux-gnu/libQtCore.so.4
#4  0xb5d253ec in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/i386-linux-gnu/libQtCore.so.4
#5  0xb5d256e1 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/i386-linux-gnu/libQtCore.so.4
#6  0xb5c10fec in QThread::exec() () from /usr/lib/i386-linux-gnu/libQtCore.so.4
#7  0xb5d04f2d in ?? () from /usr/lib/i386-linux-gnu/libQtCore.so.4
#8  0xb5c13b18 in ?? () from /usr/lib/i386-linux-gnu/libQtCore.so.4
#9  0xb471bd78 in start_thread () from /lib/i386-linux-gnu/libpthread.so.0
#10 0xb5a013de in clone () from /lib/i386-linux-gnu/libc.so.6

Thread 1 (Thread 0xb3cbf980 (LWP 6214)):
[KCrash Handler]
#6  0xb7403afe in QApt::Backend::initErrorMessage() const () from /usr/lib/libqapt.so.2
#7  0xb76f7795 in QAptActions::initError() () from /usr/lib/libmuonapt.so
#8  0xafdb462d in ApplicationBackend::initBackend() () from /usr/lib/kde4/muon-appsbackend.so
#9  0xafdb2db4 in ?? () from /usr/lib/kde4/muon-appsbackend.so
#10 0xb5d3cb56 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/i386-linux-gnu/libQtCore.so.4
#11 0xb5d46225 in ?? () from /usr/lib/i386-linux-gnu/libQtCore.so.4
#12 0xb5d4626c in ?? () from /usr/lib/i386-linux-gnu/libQtCore.so.4
#13 0xb5d422d4 in QObject::event(QEvent*) () from /usr/lib/i386-linux-gnu/libQtCore.so.4
#14 0xb629ac7c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/i386-linux-gnu/libQtGui.so.4
#15 0xb629db94 in QApplication::notify(QObject*, QEvent*) () from /usr/lib/i386-linux-gnu/libQtGui.so.4
#16 0xb6e13d01 in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#17 0xb5d2690e in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/i386-linux-gnu/libQtCore.so.4
#18 0xb5d5b8c0 in ?? () from /usr/lib/i386-linux-gnu/libQtCore.so.4
#19 0xb5d585a8 in ?? () from /usr/lib/i386-linux-gnu/libQtCore.so.4
#20 0xb46433b3 in g_main_context_dispatch () from /lib/i386-linux-gnu/libglib-2.0.so.0
#21 0xb4643750 in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#22 0xb4643831 in g_main_context_iteration () from /lib/i386-linux-gnu/libglib-2.0.so.0
#23 0xb5d58c21 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/i386-linux-gnu/libQtCore.so.4
#24 0xb6351a5a in ?? () from /usr/lib/i386-linux-gnu/libQtGui.so.4
#25 0xb5d253ec in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/i386-linux-gnu/libQtCore.so.4
#26 0xb5d256e1 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/i386-linux-gnu/libQtCore.so.4
#27 0xb5d2b3fa in QCoreApplication::exec() () from /usr/lib/i386-linux-gnu/libQtCore.so.4
#28 0xb6298fc4 in QApplication::exec() () from /usr/lib/i386-linux-gnu/libQtGui.so.4
#29 0x0805d85b in ?? ()
#30 0xb5929935 in __libc_start_main () from /lib/i386-linux-gnu/libc.so.6
#31 0x0805d919 in _start ()

Possible duplicates by query: bug 319463, bug 318610.

Reported using DrKonqi
Comment 1 Jonathan Thomas 2013-05-20 13:21:08 UTC
*** Bug 319463 has been marked as a duplicate of this bug. ***
Comment 2 Jonathan Thomas 2013-05-20 13:21:34 UTC
Git commit ec346e2ab372ec4a6d756b4f18a7f8aefb50ed08 by Jonathan Thomas.
Committed on 20/05/2013 at 15:18.
Pushed by jmthomas into branch '2.0'.

Fix a crash that occurs while reporting fatal initialization errors.
FIXED-IN:2.0.1

M  +5    -6    libmuon/backends/ApplicationBackend/ApplicationBackend.cpp
M  +3    -0    libmuonapt/QAptActions.cpp
M  +1    -4    muon/MainWindow.cpp

http://commits.kde.org/muon/ec346e2ab372ec4a6d756b4f18a7f8aefb50ed08
Comment 3 Jonathan Thomas 2013-05-20 13:23:25 UTC
Git commit 12de6e6630024360b787d0b50f82453ad000d2cb by Jonathan Thomas.
Committed on 20/05/2013 at 15:18.
Pushed by jmthomas into branch 'master'.

Fix a crash that occurs while reporting fatal initialization errors.
FIXED-IN:2.0.1

Conflicts:
	libmuon/backends/ApplicationBackend/ApplicationBackend.cpp
	libmuonapt/QAptActions.cpp

M  +4    -5    libmuon/backends/ApplicationBackend/ApplicationBackend.cpp
M  +5    -1    libmuonapt/QAptActions.cpp
M  +1    -4    muon/MainWindow.cpp

http://commits.kde.org/muon/12de6e6630024360b787d0b50f82453ad000d2cb