Fix a crash that occurs while reporting fatal initialization errors.

BUG:319978
FIXED-IN:2.0.1