libmuonapt/QAptActions.cpp
@@ -75,6 +75,9 @@ void QAptActions::setMainWindow(KXmlGuiWindow* w)
 void QAptActions::setBackend(QApt::Backend* backend)
 {
     m_backend = backend;
+    if (!m_backend->init())
+        initError();
+
     connect(m_backend, SIGNAL(packageChanged()), this, SLOT(setActionsEnabled()));
 
     setOriginalState(m_backend->currentCacheState());
